@startuml
[*] --> PARSE_EMPTY_SPACE_STATE

PARSE_EMPTY_SPACE_STATE --> PARSE_EMPTY_SPACE_STATE
PARSE_EMPTY_SPACE_STATE --> PARSE_TAG_KEY_STATE
PARSE_EMPTY_SPACE_STATE --> PARSE_URL_STATE

PARSE_TAG_KEY_STATE --> PARSE_EMPTY_SPACE_STATE
PARSE_TAG_KEY_STATE --> PARSE_TAG_VALUE_STATE

PARSE_URL_STATE --> PARSE_EMPTY_SPACE_STATE

PARSE_TAG_VALUE_STATE --> PARSE_EMPTY_SPACE_STATE
PARSE_TAG_VALUE_STATE --> PARSE_ATTRIBUTE_VALUE_STATE

PARSE_ATTRIBUTE_VALUE_STATE --> PARSE_EMPTY_SPACE_STATE
PARSE_ATTRIBUTE_VALUE_STATE --> PARSE_QUOTED_STRING_ATTRIBUTE_VALUE
PARSE_ATTRIBUTE_VALUE_STATE --> PARSE_ATTRIBUTE_KEY_STATE

PARSE_QUOTED_STRING_ATTRIBUTE_VALUE --> PARSE_ATTRIBUTE_VALUE_STATE

PARSE_ATTRIBUTE_KEY_STATE --> PARSE_EMPTY_SPACE_STATE
PARSE_ATTRIBUTE_KEY_STATE --> PARSE_ATTRIBUTE_VALUE_STATE

@enduml
